script-viewer: Implement javascript code viewer  * No longer displayed on web pages.

--- a/CustomCrawler/packages.config
+++ b/CustomCrawler/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net472" />
+  <package id="AvalonEdit" version="6.0.1" targetFramework="net472" />
   <package id="cef.redist.x64" version="79.1.35" targetFramework="net472" />
   <package id="cef.redist.x86" version="79.1.35" targetFramework="net472" />
   <package id="CefSharp.Common" version="79.1.350" targetFramework="net472" />
@@ -11,6 +12,7 @@
   <package id="HtmlAgilityPack" version="1.11.18" targetFramework="net472" />
   <package id="JavaScriptEngineSwitcher.ChakraCore" version="3.4.5" targetFramework="net472" />
   <package id="JavaScriptEngineSwitcher.Core" version="3.3.0" targetFramework="net472" />
+  <package id="Jsbeautifier" version="0.0.1" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net472" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0" targetFramework="net472" developmentDependency="true" />
